fix error message overflow

--- a/frontend/src/pages/interactions/InteractionsPage.module.scss
+++ b/frontend/src/pages/interactions/InteractionsPage.module.scss
@@ -26,6 +26,7 @@
         flex: 2;
         display: flex;
         flex-direction: column;
+        overflow: hidden;
         .code {
           flex: 3;
           background: #272B32;
